--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,8 @@
 @import './main.scss';
 @import './footer.scss';
 
+@import './login.scss';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
